--- a/index.html
+++ b/index.html
@@ -187,11 +187,13 @@
                         <div class="living">
 
                             <h3>Living Room Interior Design</h3>
-                            <img class="plus" src="src/plus.png" alt="">
+                            <img onclick="Click()" class="plus" src="src/plus.png"  alt="">
 
                         </div>
-                        <div>
-                            
+                        <div class="pera">
+                           <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam laboriosam, ut ipsa enim ullam alias corrupti suscipit repellendus modi veniam aut odio et, ipsum optio illo! Odio quisquam blanditiis laboriosam.
+                           </p> 
                         </div>
                     </div>
                     <div class="Commercial">
