--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <img class="bell" src="src/bell.png" alt="">
                     <div>
                         <h2>Lighting Design</h2>
-                        <p>
+                        <p class="pone">
                             Achieve the perfect balance of <br> ambient, task, and accent lighting <br> for a functional
                             atmosphere
                         </p>
@@ -144,7 +144,7 @@
                     <img class="car" src="src/car.png" alt="">
                     <div>
                         <h2>Interior Design</h2>
-                        <p>
+                        <p class="ptwo">
                             From concept to completion, we <br> oversee every detail to bring your <br> vision to life
                             efficiently
                         </p>
@@ -155,7 +155,7 @@
                     <img class="flower" src="src/flower.png" alt="">
                     <div>
                         <h2>Outdoor Design</h2>
-                        <p>
+                        <p  class="pthree">
                             Celebrate the changing seasons <br> with our seasonal outdoor decor <br> services
                         </p>
                     </div>
@@ -169,7 +169,7 @@
     <section>
         <div class="container">
             <div class="fourpart">
-                <div>
+                <div class="oimg">
                     <img src="src/Image.png" alt="">
                 </div>
 
@@ -187,18 +187,29 @@
                         <div class="living">
 
                             <h3>Living Room Interior Design</h3>
-                            <img onclick="Click()" class="plus" src="src/plus.png"  alt="">
+                            <img onclick="Click()" class="plus" src="src/plus.png" alt="">
 
                         </div>
                         <div class="pera">
-                           <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam laboriosam, ut ipsa enim ullam alias corrupti suscipit repellendus modi veniam aut odio et, ipsum optio illo! Odio quisquam blanditiis laboriosam.
-                           </p> 
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam laboriosam, ut ipsa
+                                enim ullam alias corrupti suscipit repellendus modi veniam aut odio et, ipsum optio
+                                illo! Odio quisquam blanditiis laboriosam.
+                            </p>
                         </div>
                     </div>
-                    <div class="Commercial">
-                        <h3>Commercial Office Room Interior Design</h3>
-                        <img class="plus" src="src/plus.png" alt="">
+                    <div class="Commercialone">
+                        <div class="Commercial">
+                            <h3>Commercial Office Room Interior Design</h3>
+                            <img onclick="onClick()" class="plus" src="src/plus.png" alt="">
+                        </div>
+                        <div class="peraone">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt odit ducimus aliquid
+                                illum nemo quidem autem hic ipsam soluta, explicabo eum recusandae, ipsum maiores
+                                voluptate facilis, quia neque vel quasi.
+                            </p>
+                        </div>
                     </div>
 
                     <div class="Learnbtn">
@@ -211,7 +222,7 @@
 
     <!-- 5th part -->
 
-    <!-- <section>
+    <section>
         <div class="container">
             <div class="fivepart">
                 <div>
@@ -255,11 +266,11 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- 6th part -->
 
-    <!-- <section>
+    <section>
         <div class="container">
             <div class="sixpart">
                 <div>
@@ -287,7 +298,7 @@
                                 </p>
                                 <div class="new">
                                     <img class="man" src="src/man.png" alt="">
-                                    <div>
+                                    <div >
                                         <p class="sop">Sophie Carter</p>
                                         <p class="usa">New York, USA</p>
                                     </div>
@@ -295,10 +306,75 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="arrow">
+                        <i class="fa-solid fa-arrow-left-long"></i>
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </div>
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
+
+    <!-- 7th part  -->
+
+    <section>
+        <div class="container">
+            <div class="sevenpart">
+                <h1 class="Ohead">Subscribe to Our Newsletter <span class="span">for Design Insights</span> </h1>
+                <p class="prag">Be the first to discover trends, inspirations, and special offers as <span class="spanone"> we bring the world of design directly to your inbox</span></p>
+            </div>
+        </div>
+        <div class="input">
+            <input class="enter" type="text" placeholder="Enter your email address">
+            <img class="mailicon" src="src/sms.png" alt="">
+            <div class="subbut">
+                <button>Subscribe</button>
+            </div>
+        </div>
+      
+    </section>
+
+    <!-- footer part  -->
+     <footer>
+        <div class="container">
+            <div class="footer">
+                <div>
+                    <img  src="src/logoo.png" alt="">
+                    <p class="all">VivaDecor your premier <br> destination for luxury and <br> modern interior design</p>
+                    <div class="social">
+                        <img src="src/face.png" alt=""> 
+                        <img src="src/twe.png" alt=""> 
+                        <img src="src/ins.png" alt=""> 
+                        <img src="src/lin.png" alt=""> 
+                    </div>
+                </div>
+
+                <div>
+                    <h3 class="oour">Our Services</h3>
+                    <p class="all">Interior design</p> 
+                    <p class="all">Outdoor design</p> 
+                    <p class="all">Lightning design</p> 
+                    <p class="all">Office design</p> 
+                </div>
+
+                <div >
+                    <h3 class="oour">Our Services</h3>
+                    <p class="all">Reviews</p> 
+                    <p class="all">Careers</p> 
+                    <p class="all">Pricing</p> 
+                    <p class="all">Press inquires</p> 
+                    
+                </div>
+
+                <div >
+                    <h3 class="oour">Our Services</h3>
+                    <p class="all">info@vivadecor.com</p>
+                    <p class="all">Design Avenue Cityville, <br> CA 90210 United States</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
